@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-22T16:07:54Z",
-  "count_outdated" : 554,
-  "uniques_outdated" : 103,
-  "count" : 591,
-  "uniques" : 113,
+  "timestamp" : "2022-07-23T00:32:02Z",
+  "count_outdated" : 557,
+  "uniques_outdated" : 105,
+  "count" : 592,
+  "uniques" : 114,
   "views" : [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
