@@ -1,12 +1,7 @@
 {
-  "count": 37,
+  "count": 35,
   "uniques": 9,
   "views": [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
